--- a/Project/main/index.html
+++ b/Project/main/index.html
@@ -5,11 +5,14 @@
 </head>
 <body>
 
-<div class="row">
-    <div class="col-12">Привет!</div>
+//= template/component/header.html
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">Привет!</div>
+    </div>
 </div>
 
-
-//= template/footer.html
+//= template/component/footer.html
 </body>
 </html>
