Верска баннера + фикс сетки

--- a/Project/main/index.html
+++ b/Project/main/index.html
@@ -7,11 +7,13 @@
 
 //= template/component/header.html
 
-<div class="container">
+<main>
+    //= template/component/headerBanner.html
+
     <div class="row">
-        <div class="col-12">Привет!</div>
+        <div class="col-12"></div>
     </div>
-</div>
+</main>
 
 //= template/component/footer.html
 </body>
