Добавил и подключил слайдер
Подключил слайдер к блоку с логотипами и банеру

--- a/Project/main/index.html
+++ b/Project/main/index.html
@@ -14,25 +14,37 @@
         <div class="row center mb-130 mb-xs-60">
             <div class="col-11 col-xs-12">
                 <hr>
-                <div class="pt-40 pb-40 flex-lg between">
-                    <picture>
-                        <img width="90" src="img/logo/Airbnb.png" alt="airbnb">
-                    </picture>
-                    <picture>
-                        <img width="85" src="img/logo/Hubspot.png" alt="Hubspot">
-                    </picture>
-                    <picture>
-                        <img width="85" src="img/logo/Google.png" alt="Google">
-                    </picture>
-                    <picture>
-                        <img width="123" src="img/logo/Microsoft.png" alt="Microsoft">
-                    </picture>
-                    <picture>
-                        <img width="112" src="img/logo/Walmart.png" alt="Walmart">
-                    </picture>
-                    <picture>
-                        <img width="80" src="img/logo/FedEx.png" alt="FedEx">
-                    </picture>
+                <div class="pt-40 pt-xs-40 pb-40 pb-xs-40 js-slider-logo">
+                    <div class="flex center">
+                        <picture>
+                            <img width="90" src="img/logo/Airbnb.png" alt="airbnb">
+                        </picture>
+                    </div>
+                    <div class="flex center">
+                        <picture>
+                            <img width="85" src="img/logo/Hubspot.png" alt="Hubspot">
+                        </picture>
+                    </div>
+                    <div class="flex center">
+                        <picture>
+                            <img width="85" src="img/logo/Google.png" alt="Google">
+                        </picture>
+                    </div>
+                    <div class="flex center">
+                        <picture>
+                            <img width="123" src="img/logo/Microsoft.png" alt="Microsoft">
+                        </picture>
+                    </div>
+                    <div class="flex center">
+                        <picture>
+                            <img width="112" src="img/logo/Walmart.png" alt="Walmart">
+                        </picture>
+                    </div>
+                    <div class="flex center">
+                        <picture>
+                            <img width="80" src="img/logo/FedEx.png" alt="FedEx">
+                        </picture>
+                    </div>
                 </div>
                 <hr>
             </div>
