--- a/Project/main/index.html
+++ b/Project/main/index.html
@@ -27,52 +27,108 @@
             </article>
             <article class="row">
                 <div class="col-6 col-xs-12 mb-xs-30">
-                    <div class="product-card">
-                        <div class="product-card__img">
-                            <picture class="mb-20 mb-xs-10">
-                                <img src="img/product/pump-bottle.png" alt="pump-bottle">
-                            </picture>
-                        </div>
-                        <div class="product-card__content">
-                            <h2 class="h2 mb-15 mb-xs-10">Cosmetic products</h2>
-                            <p class="text-xl text-gray mb-50 mb-xs-35">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
-                            <div class="flex-lg between">
-                                <div class="mb-xs-20">
-                                    <a class="btn mb-xs-10 mr-25 mr-xs-5" href="#">Buy Now</a>
-                                    <a class="btn btn_border text-medium" href="#">Add To Cart</a>
-                                </div>
-                                <div class="text-xxl text-medium align-center">
-                                    $120
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    //= template/component/card.html
                 </div>
                 <div class="col-6 col-xs-12">
-                    <div class="product-card">
-                        <div class="product-card__img">
-                            <picture class="mb-20 mb-xs-10">
-                                <img src="img/product/jar.png" alt="jar">
-                            </picture>
-                        </div>
-                        <div class="product-card__content">
-                            <h2 class="h2 mb-15 mb-xs-10">Cosmetic products</h2>
-                            <p class="text-xl text-gray mb-50 mb-xs-35">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
-                            <div class="flex-lg between">
-                                <div class="mb-xs-20">
-                                    <a class="btn mb-xs-10 mr-25 mr-xs-5" href="#">Buy Now</a>
-                                    <a class="btn btn_border text-medium" href="#">Add To Cart</a>
-                                </div>
-                                <div class="text-xxl text-medium align-center">
-                                    $120
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    //= template/component/card.html
                 </div>
             </article>
         </section>
     </div>
+
+    <article class="bg-lactic mb-130 mb-xs-60">
+        <div class="container">
+            <div class="row pt-50 pt-xs-40 pb-50 pb-xs-40">
+                <div class="col-4 col-xs-12 text-center mb-xs-30">
+                    <h1 class="h1 mb-30 title_underline pb-5">100%</h1>
+                    <p class="text-xxl text-gray">Organic Products</p>
+                </div>
+                <div class="col-4 col-xs-12 text-center mb-xs-30">
+                    <h1 class="h1 mb-30 title_underline pb-5">2M+</h1>
+                    <p class="text-xxl text-gray">Yearly Sales</p>
+                </div>
+                <div class="col-4 col-xs-12 text-center">
+                    <h1 class="h1 mb-30 title_underline pb-5">1.9M+</h1>
+                    <p class="text-xxl text-gray">Happy Customar</p>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <section class="container mb-130 mb-xs-60">
+        <article class="row mb-130 mb-xs-60">
+            <div class="col-6 col-xs-12 order-xs-2">
+                <h1 class="h1 mt-40 mb-20 mb-xs-10">The Perfect Beauty Of You</h1>
+                <p class="text-xl text-gray mb-20 mb-xs-10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p class="text-xl text-gray mb-50 mb-xs-30">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <a class="btn" href="#">Shop Now</a>
+            </div>
+            <div class="col-6 col-xs-12 order-xs-1 mb-xs-20">
+                <picture>
+                    <img src="img/product/pump-bottle2.png" alt="pump-bottle">
+                </picture>
+            </div>
+        </article>
+
+        <article class="row">
+            <div class="col-6 col-xs-12 mb-xs-20">
+                <picture>
+                    <img src="img/female.png" alt="female">
+                </picture>
+            </div>
+            <div class="col-6 col-xs-12">
+                <h3 class="h3 mb-10 mb-xs-10 mt-20">Amazing Cosmetic</h3>
+                <div class="star__container mb-40 mb-xs-25">
+                    <div class="star__item active">
+                        <svg class="icon-star">
+                            <use xlink:href="img/sprite.svg#star"></use>
+                        </svg>
+                    </div>
+                    <div class="star__item active">
+                        <svg class="icon-star">
+                            <use xlink:href="img/sprite.svg#star"></use>
+                        </svg>
+                    </div>
+                    <div class="star__item active">
+                        <svg class="icon-star">
+                            <use xlink:href="img/sprite.svg#star"></use>
+                        </svg>
+                    </div>
+                    <div class="star__item">
+                        <svg class="icon-star">
+                            <use xlink:href="img/sprite.svg#star"></use>
+                        </svg>
+                    </div>
+                    <div class="star__item">
+                        <svg class="icon-star">
+                            <use xlink:href="img/sprite.svg#star"></use>
+                        </svg>
+                    </div>
+                </div>
+                <p class="text-xl text-gray mb-60 mb-xs-40">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+                <h3 class="h3 mb-10 mb-xs-5">Rusmin Islam</h3>
+                <p class="text-xl text-gray">Designer</p>
+            </div>
+        </article>
+    </section>
+
+    <article class="bg-white">
+        <div class="container">
+            <div class="row pt-100 pb-50 pt-xs-60 pb-xs-25">
+                <div class="col-6 col-xs-12 mb-xs-15">
+                    <h2 class="h2">Subscribe to Get Our Letest News</h2>
+                </div>
+                <div class="col-6 col-xs-12 flex-lg end">
+                    <form class="form-subscribe" action="">
+                        <input type="email" placeholder="Enter email" tabindex="0">
+                        <button class="btn btn_form text-s" tabindex="0">
+                            Subscribe
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </article>
 </main>
 
 //= template/component/footer.html
