Добавил прелоудер для изображений, изменил конфиг eslinter

--- a/Project/main/index.html
+++ b/Project/main/index.html
@@ -63,17 +63,17 @@
                 <p class="text-xl text-gray mb-50 mb-xs-30">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <a class="btn" href="#">Shop Now</a>
             </div>
-            <div class="col-6 col-xs-12 order-xs-1 mb-xs-20">
+            <div class="col-6 col-xs-12 order-xs-1 mb-xs-20 img-hidden">
                 <picture>
-                    <img src="img/product/pump-bottle2.png" alt="pump-bottle">
+                    <img width="600" height="600" data-src="img/product/pump-bottle2.png" src="img/1x1.png" alt="pump-bottle">
                 </picture>
             </div>
         </article>
 
         <article class="row">
-            <div class="col-6 col-xs-12 mb-xs-20">
+            <div class="col-6 col-xs-12 mb-xs-20 img-hidden">
                 <picture>
-                    <img src="img/female.png" alt="female">
+                    <img  width="600" height="600" data-src="img/female.png" src="img/1x1.png" alt="female">
                 </picture>
             </div>
             <div class="col-6 col-xs-12">
