--- a/Project/main/index.html
+++ b/Project/main/index.html
@@ -65,6 +65,7 @@
             </div>
             <div class="col-6 col-xs-12 order-xs-1 mb-xs-20 img-hidden">
                 <picture>
+                    <source width="375" height="375" data-srcset="img/product/pump-bottle2.png" srcset src="img/1x1.png" media="(max-width: 716px)">
                     <img width="600" height="600" data-src="img/product/pump-bottle2.png" src="img/1x1.png" alt="pump-bottle">
                 </picture>
             </div>
@@ -73,6 +74,7 @@
         <article class="row">
             <div class="col-6 col-xs-12 mb-xs-20 img-hidden">
                 <picture>
+                    <source width="375" height="356" data-srcset="img/female.png" srcset src="img/1x1.png" media="(max-width: 716px)">
                     <img  width="600" height="600" data-src="img/female.png" src="img/1x1.png" alt="female">
                 </picture>
             </div>
